--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 <body style="background-image: url(Fondo2.jpg); background-size: cover; font-family: Arial, sans-serif; text-align: center; padding-top: 100px;">
   <h1 style="font-size: 36px; animation: moveTitle 3s infinite alternate;">Menú</h1>
   <div style="display: flex; justify-content: center; margin-top: 20px;">
-    <a href="raziel.html" style="display: inline-block; padding: 10px 20px; background-color: #ffffff; color: #333333; text-decoration: none; border-radius: 5px; font-size: 16px; margin-right: 10px;">
+    <a href="Raziel.html" style="display: inline-block; padding: 10px 20px; background-color: #ffffff; color: #333333; text-decoration: none; border-radius: 5px; font-size: 16px; margin-right: 10px;">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZGyTr9oIF1_EJOLfWXxtil0oRKu5GOfNbDQ&usqp=CAU" alt="Imagen de Raziel" style="width: 200px; height: 200px; display: block; margin-bottom: 10px;">
       Raziel
     </a>
